odoo/generated/odoo/templates/networkpolicy.yaml
---
# Source: odoo/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: odoo
  namespace: "odoo"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: odoo
    app.kubernetes.io/version: 17.0.20240905
    helm.sh/chart: odoo-26.2.18
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: odoo
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8069
        - port:
